[metadata]
name = unf
version = attr:unf.__version__
author = Christian Haselgrove
author_email = christian.haselgrove@umassmed.edu
description = Universal Numeric Fingerprints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chaselgrove/python-unf

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = unf
python_requires = >=3.9

# eof
